<?xml version="1.0" encoding="utf-8"?>

<layout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout android:id="@+id/add_sleep_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.MainActivity"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_data_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_much_sleep_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="17sp"
        android:textColor="@color/color_grey"
        />
    <com.google.android.material.slider.Slider android:id="@+id/sleep_time_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:valueFrom="0.0"
        android:valueTo="12.0"
        android:stepSize="0.5"

        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_did_you_feel_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="17sp"
        android:textColor="@color/color_grey"
        />
    <com.google.android.material.slider.Slider android:id="@+id/feeling_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:valueFrom="0.0"
        android:valueTo="10.0"
        android:stepSize="1.0"

        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any_other_notes_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="17sp"
        android:textColor="@color/color_grey"
        />

    <EditText android:id="@+id/notes_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:padding="15dp"
        android:textSize="17sp"
        android:textColor="@color/color_grey"
        android:inputType="text"
        android:hint="@string/your_notes_here"
        android:autofillHints="no" />
    <com.google.android.material.button.MaterialButton android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:text="@string/save_txt"

        />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/color_green_dark"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <TextView android:id="@+id/average_sleep_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="17sp"
            android:text="@string/average_hours_of_sleep_txt"
            android:textColor="@color/white"

            />

            <TextView android:id="@+id/average_sleep_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/average_sleep_tv"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="17sp"

                tools:text="7.5" />

            <TextView android:id="@+id/average_feeling_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="17sp"
                android:text="@string/average_feeling_txt"
                android:textColor="@color/white"
                android:layout_below="@id/average_sleep_tv"

                />

            <TextView android:id="@+id/average_feeling_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_below="@id/average_sleep_tv"
                android:layout_toEndOf="@+id/average_feeling_tv"
                tools:text="5/10" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/sleep_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:itemCount="4"
        tools:listitem="@layout/item_sleep"
        />
</LinearLayout>
</ScrollView>

</layout>
